source/tests/errors/cannot_iterate.apex
x = 42
for item in x
    os.output(item)